[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/roman_numeral_1.png" type="Texture" id=1]
[ext_resource path="res://Projectile/Vacuum/vacuum_deploy/deployed_ghost_basic.gd" type="Script" id=2]
[ext_resource path="res://Sprites/basic_light1.png" type="Texture" id=3]
[ext_resource path="res://Projectile/fire/Flamethrower/light_32x32.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48.3331, 43.3336 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.75, 1.50006 )

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="CanvasItemMaterial" id=14]
blend_mode = 1
light_mode = 1

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.993151, 1 )
colors = PoolColorArray( 0.423529, 0.423529, 0.423529, 0.882353, 0.393446, 0.393446, 0.393446, 0.261886, 0.392157, 0.392157, 0.392157, 0.235294 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 15 )

[sub_resource type="Curve" id=16]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, 0.372591, 0, 0, Vector2( 1, 1.97853 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=17]
flag_rotate_y = true
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 500, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 100.0
radial_accel_random = 1.0
damping = 100.0
damping_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 13 )
color = Color( 1, 1, 0.317647, 1 )
color_ramp = SubResource( 12 )
hue_variation = -0.01
hue_variation_random = 1.0

[node name="friend_ghost_basic" type="KinematicBody2D" groups=["nice_enemys"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
color = Color( 1, 0, 0, 1 )
energy = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.499999, 1.31924e-06 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Node2D"]
position = Vector2( 0.5, 0 )
collision_layer = 545
collision_mask = 545

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2( -1, 3.19679e-06 )
scale = Vector2( 1, 12 )
shape = SubResource( 2 )

[node name="Area2Dfront" type="Area2D" parent="Node2D"]
position = Vector2( 0.5, 0 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2Dfront"]
position = Vector2( -0.499881, 19 )
shape = SubResource( 2 )

[node name="Area2Dleft" type="Area2D" parent="Node2D"]
position = Vector2( 0.5, 0 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2Dleft"]
position = Vector2( 18.5, -0.00012207 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2Dright" type="Area2D" parent="Node2D"]
position = Vector2( 0.5, 0 )
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2Dright"]
position = Vector2( -19.5, -0.749828 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2Dback" type="Area2D" parent="Node2D"]
collision_layer = 513
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2Dback"]
position = Vector2( -0.000120163, -19 )
shape = SubResource( 2 )

[node name="Area2Dcirce" type="Area2D" parent="."]
collision_layer = 545
collision_mask = 545

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2Dcirce"]
shape = SubResource( 3 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 2.86102e-06, 1.90735e-06 )
rotation = 3.14159
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="Icon"]
modulate = Color( 0.670588, 0.694118, 0.941176, 1 )
material = SubResource( 14 )
position = Vector2( 6.94806e-06, 4.74787e-06 )
rotation = 4.71239
scale = Vector2( 2, 2 )
amount = 25
lifetime = 0.5
randomness = 1.0
process_material = SubResource( 17 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Icon"]
modulate = Color( 1, 1, 1, 0.588235 )
rotation = 1.5708
scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 1 )

[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Node2D/Area2Dfront" to="." method="_on_Area2Dfront_body_entered"]
[connection signal="body_exited" from="Node2D/Area2Dfront" to="." method="_on_Area2Dfront_body_exited"]
[connection signal="body_entered" from="Node2D/Area2Dleft" to="." method="_on_Area2Dleft_body_entered"]
[connection signal="body_exited" from="Node2D/Area2Dleft" to="." method="_on_Area2Dleft_body_exited"]
[connection signal="body_entered" from="Node2D/Area2Dright" to="." method="_on_Area2Dright_body_entered"]
[connection signal="body_exited" from="Node2D/Area2Dright" to="." method="_on_Area2Dright_body_exited"]
[connection signal="body_entered" from="Node2D/Area2Dback" to="." method="_on_Area2Dback_body_entered"]
[connection signal="body_exited" from="Node2D/Area2Dback" to="." method="_on_Area2Dback_body_exited"]
[connection signal="body_entered" from="Area2Dcirce" to="." method="_on_Area2Dcirce_body_entered"]
[connection signal="body_exited" from="Area2Dcirce" to="." method="_on_Area2Dcirce_body_exited"]
